--- a/groupby/src/modules/blog/containers/home/home.component.css
+++ b/groupby/src/modules/blog/containers/home/home.component.css
@@ -24,7 +24,7 @@ header.masthead {
     position: relative;
     background-size: cover;
     height: 100vh;
-    background-image: url("assets/img/home-bg.jpg");
+    background-image: url("src/assets/img/home-bg.jpg");
 }
 header.masthead .overlay {
     position: absolute;
