Entry site, login page, registration page, animations, footer

--- a/groupby/src/modules/navigation/containers/footer/footer.component.html
+++ b/groupby/src/modules/navigation/containers/footer/footer.component.html
@@ -12,7 +12,7 @@
 
                     </ul>
                 </div>
-                <p class="copyright text-muted">Copyright © 2021 All rights reserved | This application is made by <a href="">Grzegorz Bielesza</a></p>
+                <p class="copyright text-white-50">Copyright © 2021 All rights reserved | This application is made by <a href="">Grzegorz Bielesza</a></p>
             </div>
         </div>
     </div>
