--- a/groupby/src/modules/entry-site/containers/about/about.component.html
+++ b/groupby/src/modules/entry-site/containers/about/about.component.html
@@ -1,6 +1,6 @@
-<sb-layout-blog>
-    <sb-clean-blog-header backgroundImage='url("assets/img/updates.jpg")' heading="What's new" subHeading="These are the changes we've made recently" [siteHeading]="true">
-    </sb-clean-blog-header>
+<layout-entry-site>
+    <auth-box backgroundImage='url("assets/img/updates.jpg")' heading="What's new" subHeading="These are the changes we've made recently" [siteHeading]="true">
+    </auth-box>
     <ng-container>
         <div class="container">
         <div class="row">
@@ -29,4 +29,4 @@
             </div>
         </div>
     </div></ng-container>
-</sb-layout-blog>
+</layout-entry-site>
