--- a/groupby/src/modules/navigation/containers/footer/footer.component.css
+++ b/groupby/src/modules/navigation/containers/footer/footer.component.css
@@ -1,6 +1,8 @@
+
 footer {
-    padding: 50px 0 50px;
-    background: #212329;
+  opacity: 1;
+  background-color: rgba(0,0,0,0.6);
+  height: 155px;
 }
 
 .social-menu ul {
@@ -9,6 +11,7 @@ footer {
     align-items: center;
     padding: 0;
     margin-bottom: 24px;
+  margin-top: 30px;
     display: flex;
 }
 .social-menu ul li {
@@ -54,9 +57,11 @@ footer {
     font-size: 14px;
     margin-bottom: 0;
     text-align: center;
+    color:whitesmoke;
 }
 
 a{
-    color: whitesmoke;
+    color: #FCA17D;
     text-decoration: none;
 }
+
