--- a/groupby/src/modules/entry-site/containers/home/home.component.html
+++ b/groupby/src/modules/entry-site/containers/home/home.component.html
@@ -15,19 +15,34 @@
             <h1>Create Account</h1>
             <div class="input-boxes">
               <div class="input-box">
-                <i class="fas fa-user"></i>
-                <input type="text" placeholder="Enter your name" required>
+                <fa-icon [icon]="faUsername"></fa-icon>
+                <input type="text" placeholder="Enter your firstname" style="margin-right: 15px" required>
+                <fa-icon [icon]="faUsername" style="position: relative; left: 15px"></fa-icon>
+                <input type="text" placeholder="Enter your surname" required>
               </div>
               <div class="input-box">
-                <i class="fas fa-envelope"></i>
-                <input type="text" placeholder="Enter your email" required>
+                <fa-icon [icon]="faMail"></fa-icon>
+                <input type="email" placeholder="Enter your email" required>
               </div>
               <div class="input-box">
-                <i class="fas fa-lock"></i>
+                <fa-icon [icon]="faPassword"></fa-icon>
                 <input type="password" placeholder="Enter your password" required>
               </div>
+              <div class="input-box">
+                <fa-icon [icon]="faCalendar"></fa-icon>
+                <input type="date" placeholder="Enter your date of birth" required>
+              </div>
+              <div class="input-box">
+                <fa-icon [icon]="faGender"></fa-icon>
+                <select name="gender" id="gender-select">
+                  <option value="nothing">--Please choose an option--</option>
+                  <option value="male">Male</option>
+                  <option value="female">Female</option>
+                  <option value="other">Other</option>
+                </select>
+              </div>
               <div class="button input-box">
-                <input type="submit" value="Sumbit">
+                <input type="submit" value="Sign up">
               </div>
             </div>
           </div>
