auth module added including interceptors, token and auth services. Home module added. Logging added including passing bearer token. Small refactoring of entry component

--- a/groupby/src/modules/navigation/containers/top-nav/top-nav.component.html
+++ b/groupby/src/modules/navigation/containers/top-nav/top-nav.component.html
@@ -6,7 +6,7 @@
         </button>
 
         <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto" [ngbCollapse]="isMenuCollapsed">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/about">New features</a></li>
                 <li class="nav-item"><a class="btn btn-primary" routerLink="/auth/login">Login</a></li>
