--- a/groupby/src/modules/entry-site/components/entry/entry.component.html
+++ b/groupby/src/modules/entry-site/components/entry/entry.component.html
@@ -7,7 +7,7 @@
 <div class="container" id="container">
   <div class="form-container sign-up-container">
 
-    <form action="#">
+    <form>
       <div class="forms">
         <div class="form-content">
           <div class="signup-form">
@@ -33,8 +33,8 @@
               </div>
               <div class="input-box">
                 <fa-icon [icon]="faGender"></fa-icon>
-                <select name="gender" id="gender-select">
-                  <option value="nothing">--Please choose an option--</option>
+                <select id="gender-select">
+                  <option value="nothing">Please choose an option</option>
                   <option value="male">Male</option>
                   <option value="female">Female</option>
                   <option value="other">Other</option>
@@ -51,7 +51,7 @@
     </form>
   </div>
   <div class="form-container sign-in-container">
-    <form action="#">
+    <form>
 
       <div class="forms">
         <div class="form-content">
