file structure entry module improved, sidenav component added

--- a/groupby/src/modules/entry-site/components/entry/entry.component.html
+++ b/groupby/src/modules/entry-site/components/entry/entry.component.html
@@ -1,8 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light fixed-top">
-
-    <a class="navbar-brand" href="#">GroupBy</a>
-
-</nav>
+<top-nav></top-nav>
 
 <div class="container" id="container">
   <div class="form-container sign-up-container">
