--- a/groupby/src/modules/navigation/components/sidenav/sidenav.component.html
+++ b/groupby/src/modules/navigation/components/sidenav/sidenav.component.html
@@ -1,1 +1,87 @@
-<p>sidenav works!</p>
+
+<div class="sidebar">
+  <div class="logo-details">
+
+    <div class="logo_name">GroupBy</div>
+    <i class='bx bx-menu' id="btn" (click)="toggleSideBar()" ></i>
+  </div>
+  <ul class="nav-list">
+    <li>
+      <i class='bx bx-search' (click)="toggleSideBar()"></i>
+      <input type="text" placeholder="Search...">
+      <span class="tooltip">Search</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-grid-alt'></i>
+        <span class="links_name">Dashboard</span>
+      </a>
+      <span class="tooltip">Dashboard</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-user' ></i>
+        <span class="links_name">User</span>
+      </a>
+      <span class="tooltip">User</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-chat' ></i>
+        <span class="links_name">Messages</span>
+      </a>
+      <span class="tooltip">Messages</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-pie-chart-alt-2' ></i>
+        <span class="links_name">Analytics</span>
+      </a>
+      <span class="tooltip">Analytics</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-folder' ></i>
+        <span class="links_name">File Manager</span>
+      </a>
+      <span class="tooltip">Files</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-cart-alt' ></i>
+        <span class="links_name">Order</span>
+      </a>
+      <span class="tooltip">Order</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-heart' ></i>
+        <span class="links_name">Saved</span>
+      </a>
+      <span class="tooltip">Saved</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-cog' ></i>
+        <span class="links_name">Settings</span>
+      </a>
+      <span class="tooltip">Settings</span>
+    </li>
+
+    <li class="profile">
+      <div class="profile-details">
+        <!--<img src="profile.jpg" alt="profileImg">-->
+        <div class="name_job">
+          <div class="name">user1234</div>
+          <div class="job">John Doe</div>
+        </div>
+      </div>
+      <i class='bx bx-log-out' id="log_out" (click)="logout()"></i>
+      <span class="tooltip">Logout</span>
+    </li>
+  </ul>
+</div>
+<section class="home-section">
+  <div class="text">Dashboard</div>
+</section>
+
