--- a/groupby/src/modules/navigation/components/sidenav/sidenav.component.html
+++ b/groupby/src/modules/navigation/components/sidenav/sidenav.component.html
@@ -9,21 +9,28 @@
     <li>
       <i class='bx bx-search' (click)="toggleSideBar()"></i>
       <input type="text" placeholder="Search...">
-      <span class="tooltip">Search</span>
+      <span class="tooltip">Browse your groups</span>
     </li>
     <li>
       <a href="#">
-        <i class='bx bx-grid-alt'></i>
+        <i class='bx bx-home' ></i>
         <span class="links_name">Dashboard</span>
       </a>
       <span class="tooltip">Dashboard</span>
     </li>
     <li>
       <a href="#">
-        <i class='bx bx-user' ></i>
-        <span class="links_name">User</span>
+        <i class='bx bx-category-alt' ></i>
+        <span class="links_name">Find new groups</span>
       </a>
-      <span class="tooltip">User</span>
+      <span class="tooltip">Find new groups</span>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-user' ></i>
+        <span class="links_name">Profile</span>
+      </a>
+      <span class="tooltip">Profile</span>
     </li>
     <li>
       <a href="#">
@@ -34,32 +41,13 @@
     </li>
     <li>
       <a href="#">
-        <i class='bx bx-pie-chart-alt-2' ></i>
-        <span class="links_name">Analytics</span>
+        <i class='bx bx-bell' ></i>
+        <span class="links_name">Notifications</span>
       </a>
-      <span class="tooltip">Analytics</span>
+      <span class="tooltip">Notifications</span>
     </li>
-    <li>
-      <a href="#">
-        <i class='bx bx-folder' ></i>
-        <span class="links_name">File Manager</span>
-      </a>
-      <span class="tooltip">Files</span>
-    </li>
-    <li>
-      <a href="#">
-        <i class='bx bx-cart-alt' ></i>
-        <span class="links_name">Order</span>
-      </a>
-      <span class="tooltip">Order</span>
-    </li>
-    <li>
-      <a href="#">
-        <i class='bx bx-heart' ></i>
-        <span class="links_name">Saved</span>
-      </a>
-      <span class="tooltip">Saved</span>
-    </li>
+
+
     <li>
       <a href="#">
         <i class='bx bx-cog' ></i>
@@ -67,10 +55,17 @@
       </a>
       <span class="tooltip">Settings</span>
     </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-help-circle' ></i>
+        <span class="links_name">Help</span>
+      </a>
+      <span class="tooltip">Help</span>
+    </li>
 
     <li class="profile">
       <div class="profile-details">
-        <!--<img src="profile.jpg" alt="profileImg">-->
+        <img src="/assets/img/error-404-monochrome.svg" alt="profileImg">
         <div class="name_job">
           <div class="name">user1234</div>
           <div class="job">John Doe</div>
@@ -82,6 +77,85 @@
   </ul>
 </div>
 <section class="home-section">
-  <div class="text">Dashboard</div>
-</section>
+
+  <div class="text">Your groups</div>
+
+      <div class="row">
+
+        <div class="col-lg-4 col-md-6 d-flex mb-4 mb-md-0">
+          <div class="icon-box iconbox-blue">
+            <div class="icon">
+              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
+              </svg>
+            </div>
+            <h4><a href="">JQuery</a></h4>
+            <p>Lekka biblioteka programistyczna dla języka JavaScript, ułatwiająca korzystanie z JavaScriptu (w tym manipulację drzewem DOM). Kosztem niewielkiego spadku wydajności w stosunku do profesjonalnie napisanego kodu w niewspomaganym JavaScripcie pozwala osiągnąć interesujące efekty animacji, dodać dynamiczne zmiany strony, wykonać zapytania AJAX. Większość wtyczek i skryptów opartych na jQuery działa na stronach nie wymagając zmian w kodzie HTML (np. zamienia klasyczne galerie złożone z miniatur linkujących do obrazków w dynamiczną galerię).</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex mt-4">
+          <div class="group-content">
+            <div class="group-icon"><i class='bx bxs-group'></i></div>
+            <h4><a href="">Bootstrap</a></h4>
+            <p>biblioteka CSS, rozwijany przez programistów Twittera, wydawany na licencji MIT[1]. Zawiera zestaw przydatnych narzędzi ułatwiających tworzenie interfejsu graficznego stron oraz aplikacji internetowych. Bazuje głównie na gotowych rozwiązaniach HTML oraz CSS (kompilowanych z plików Less[2]) i może być stosowany m.in. do stylizacji takich elementów jak teksty, formularze, przyciski, wykresy, nawigacje i innych komponentów wyświetlanych na stronie. Biblioteka korzysta także z języka JavaScript.</p>
+
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+          <div class="icon-box iconbox-pink">
+            <div class="icon">
+              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,541.5067337569781C382.14930387511276,545.0595476570109,479.8736841581634,548.3450877840088,526.4010558755058,480.5488172755941C571.5218469581645,414.80211281144784,517.5187510058486,332.0715597781072,496.52539010469104,255.14436215662573C477.37192572678356,184.95920475031193,473.57363656557914,105.61284051026155,413.0603344069578,65.22779650032875C343.27470386102294,18.654635553484475,251.2091493199835,5.337323636656869,175.0934190732945,40.62881213300186C97.87086631185822,76.43348514350839,51.98124368387456,156.15599469081315,36.44837278890362,239.84606092416172C21.716077023791087,319.22268207091537,43.775223500013084,401.1760424656574,96.891909868211,461.97329694683043C147.22146801428983,519.5804099606455,223.5754009179313,538.201503339737,300,541.5067337569781"></path>
+              </svg>
+              <i class='bx bxl-shopify'></i>
+            </div>
+            <h4><a href="">Webstorage</a></h4>
+            <p>API pozwalające na przechowywanie ustrukturyzowanych danych w przeglądarce. Jest to rozwiązanie znacznie szybsze i wygodniejsze od tzw "cookies". Dane nie są już przesyłane wraz z każdym żądaniem HTTP, a jedynie wtedy kiedy są rzeczywiście potrzebne. Ponadto możliwe jest przechowywanie znacznie większych ilości danych bez negatywnego wpływu na wydajność aplikacji.</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="icon-box iconbox-yellow">
+            <div class="icon">
+              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,503.46388370962813C374.79870501325706,506.71871716319447,464.8034551963731,527.1746412648533,510.4981551193396,467.86667711651364C555.9287308511215,408.9015244558933,512.6030010748507,327.5744911775523,490.211057578863,256.5855673507754C471.097692560561,195.9906835881958,447.69079081568157,138.11976852964426,395.19560036434837,102.3242989838813C329.3053358748298,57.3949838291264,248.02791733380457,8.279543830951368,175.87071277845988,42.242879143198664C103.41431057327972,76.34704239035025,93.79494320519305,170.9812938413882,81.28167332365135,250.07896920659033C70.17666984294237,320.27484674793965,64.84698225790005,396.69656628748305,111.28512138212992,450.4950937839243C156.20124167950087,502.5303643271138,231.32542653798444,500.4755392045468,300,503.46388370962813"></path>
+              </svg>
+              <i class='bx bx-mobile' ></i>
+            </div>
+            <h4><a href="">JavaFX</a></h4>
+            <p>Technologia oprogramowania, która w połączeniu ze środowiskiem Java pozwala tworzyć i wdrażać aplikacje o nowoczesnym wyglądzie oraz bogactwie treści i elementów multimedialnych. Jest to również zestaw bibliotek umożliwiających dostęp do niektórych zasobów sprzętowych tj. karta graficzna.</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+          <div class="icon-box iconbox-red">
+            <div class="icon">
+              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,532.3542879108572C369.38199826031484,532.3153073249985,429.10787420159085,491.63046689027357,474.5244479745417,439.17860296908856C522.8885846962883,383.3225815378663,569.1668002868075,314.3205725914397,550.7432151929288,242.7694973846089C532.6665558377875,172.5657663291529,456.2379748765914,142.6223662098291,390.3689995646985,112.34683881706744C326.66090330228417,83.06452184765237,258.84405631176094,53.51806209861945,193.32584062364296,78.48882559362697C121.61183558270385,105.82097193414197,62.805066853699245,167.19869350419734,48.57481801355237,242.6138429142374C34.843463184063346,315.3850353017275,76.69343916112496,383.4422959591041,125.22947124332185,439.3748458443577C170.7312796277747,491.8107796887764,230.57421082200815,532.3932930995766,300,532.3542879108572"></path>
+              </svg>
+              <i class='bx bxl-quora' ></i>
+            </div>
+            <h4><a href="">QT</a></h4>
+            <p>Zestaw przenośnych bibliotek i narzędzi programistycznych dedykowanych dla języków C++, QML i Java. Ich podstawowym składnikiem są klasy służące do budowy graficznego interfejsu programów komputerowych, począwszy od wersji 4.0 Qt zawiera też narzędzia do tworzenia programów konsolowych i serwerów.</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+          <div class="icon-box iconbox-teal">
+            <div class="icon">
+              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,566.797414625762C385.7384707136149,576.1784315230908,478.7894351017131,552.8928747891023,531.9192734346935,484.94944893311C584.6109503024035,417.5663521118492,582.489472248146,322.67544863468447,553.9536738515405,242.03673114598146C529.1557734026468,171.96086150256528,465.24506316201064,127.66468636344209,395.9583748389544,100.7403814666027C334.2173773831606,76.7482773500951,269.4350130405921,84.62216499799875,207.1952322260088,107.2889140133804C132.92018162631612,134.33871894543012,41.79353780512637,160.00259165414826,22.644507872594943,236.69541883565114C3.319112789854554,314.0945973066697,72.72355303640163,379.243833228382,124.04198916343866,440.3218312028393C172.9286146004772,498.5055451809895,224.45579914871206,558.5317968840102,300,566.797414625762"></path>
+              </svg>
+              <i class='bx bxl-git' ></i>
+            </div>
+            <h4><a href="">Git</a></h4>
+            <p>Rozproszony system kontroli wersji. Stworzył go Linus Torvalds jako narzędzie wspomagające rozwój jądra Linux. Git stanowi wolne oprogramowanie i został opublikowany na licencji GNU GPL w wersji 2.
+
+              Pierwsza wersja narzędzia Git została wydana 7 kwietnia 2005 roku, by zastąpić poprzednio używany w rozwoju Linuksa, niebędący wolnym oprogramowaniem, system kontroli wersji BitKeeper.</p>
+          </div>
+        </div>
+      </div>
+  </section>
 
