deleted help icon from sidenav - it will be inside settings

--- a/groupby/src/modules/navigation/components/sidenav/sidenav.component.css
+++ b/groupby/src/modules/navigation/components/sidenav/sidenav.component.css
@@ -285,7 +285,7 @@
   clip-path: circle(48px at center);
 }
 
-.name {
+.group-name {
   font-weight: bold;
   font-size: 18px;
   margin-bottom: 8px;
