--- a/groupby/src/modules/navigation/components/sidenav/sidenav.component.html
+++ b/groupby/src/modules/navigation/components/sidenav/sidenav.component.html
@@ -12,8 +12,8 @@
       <span class="tooltip">Browse your groups</span>
     </li>
     <li>
-      <a href="#">
-        <i class='bx bx-home' ></i>
+      <a href="/home">
+        <i class='bx bx-home'></i>
         <span class="links_name">Dashboard</span>
       </a>
       <span class="tooltip">Dashboard</span>
@@ -55,13 +55,7 @@
       </a>
       <span class="tooltip">Settings</span>
     </li>
-    <li>
-      <a href="#">
-        <i class='bx bx-help-circle' ></i>
-        <span class="links_name">Help</span>
-      </a>
-      <span class="tooltip">Help</span>
-    </li>
+
 
     <li class="profile">
       <div class="profile-details">
@@ -79,77 +73,26 @@
 <section class="home-section">
 
   <div class="text">Your groups</div>
-<!--
-  <div class="groups">
-          <div class="group-content">
-            <div class="group-icon"><img src="assets/img/error-404-monochrome.svg"> </div>
-            <h4>Bootstrap</h4>
-            <p>biblioteka CSS, rozwijany przez programistów Twittera, wydawany na licencji MIT[1].</p>
-
-          </div>
-
-          <div class="group-content">
-            <div class="group-icon"><img src="assets/img/error-404-monochrome.svg"> </div>
-            <h4>Bootstrap</h4>
-            <p>biblioteka CSS, rozwijany przez programistów Twittera, wydawany na licencji MIT[1]. Zawiera zestaw przydatnych narzędzi ułatwiających tworzenie interfejsu graficznego stron oraz aplikacji internetowych. Bazuje głównie na gotowych rozwiązaniach HTML oraz CSS (kompilowanych z plików Less[2]) i może być stosowany</p>
-
-          </div>
-
-          <div class="group-content">
-            <div class="group-icon"><img src="assets/img/error-404-monochrome.svg"> </div>
-            <h4>Bootstrap</h4>
-            <p>biblioteka CSS, rozwijany przez programistów Twittera, wydawany na licencji MIT[1]. Zawiera zestaw przydatnych narzędzi ułatwiających tworzenie interfejsu graficznego stron oraz aplikacji internetowych. Bazuje głównie na gotowych rozwiązaniach HTML oraz CSS (kompilowanych z plików Less[2]) i może być stosowany</p>
-
-          </div>
-
-          <div class="group-content">
-            <div class="group-icon"><img src="assets/img/error-404-monochrome.svg"> </div>
-            <h4>Bootstrap</h4>
-            <p>biblioteka CSS, rozwijany przez programistów Twittera, wydawany na licencji MIT[1]. Zawiera zestaw przydatnych narzędzi ułatwiających tworzenie interfejsu graficznego stron oraz aplikacji internetowych. Bazuje głównie na gotowych rozwiązaniach HTML oraz CSS (kompilowanych z plików Less[2]) i może być stosowany</p>
-
-          </div>
-
-        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-          <div class="group-content">
-            <div class="group-icon"><img src="assets/img/error-404-monochrome.svg"> </div>
-            <h4>Bootstrap</h4>
-            <p>biblioteka CSS, rozwijany przez programistów Twittera, wydawany na licencji MIT[1]. Zawiera zestaw przydatnych narzędzi ułatwiających tworzenie interfejsu graficznego stron oraz aplikacji internetowych. Bazuje głównie na gotowych rozwiązaniach HTML oraz CSS (kompilowanych z plików Less[2]) i może być stosowany</p>
-
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 d-flex mt-4 mt-md-0">
-          <div class="group-content">
-            <div class="group-icon"><img src="assets/img/error-404-monochrome.svg"> </div>
-            <h4>Bootstrap</h4>
-            <p>biblioteka CSS, rozwijany przez programistów Twittera, wydawany na licencji MIT[1]. Zawiera zestaw przydatnych narzędzi ułatwiających tworzenie interfejsu graficznego stron oraz aplikacji internetowych. Bazuje głównie na gotowych rozwiązaniach HTML oraz CSS (kompilowanych z plików Less[2]) i może być stosowany</p>
-
-          </div>
-        </div>
-
-  </div>
-  -->
-
 
   <div class="wrapper-grid">
     <div class="container">
       <img src='https://images.unsplash.com/photo-1444011283387-7b0f76371f12?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt='profile image' class="profile-img">
-      <p class="name">Groupa błyskawicznegoasdsadsadsa reagowania12345678 asdas a sdsadsa</p>
+      <p class="group-name">Grupa długa nazwa</p>
     </div>
 
     <div class="container">
       <img src='https://images.unsplash.com/photo-1444011283387-7b0f76371f12?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt='profile image' class="profile-img">
-      <p class="name">Anna Marie</p>
+      <p class="group-name">Grupa 2</p>
     </div>
 
     <div class="container">
       <img src='https://images.unsplash.com/photo-1444011283387-7b0f76371f12?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt='profile image' class="profile-img">
-      <p class="name">Anna Marie</p>
+      <p class="group-name">Grupa 3</p>
     </div>
 
     <div class="container">
       <img src='https://images.unsplash.com/photo-1444011283387-7b0f76371f12?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt='profile image' class="profile-img">
-      <p class="name">Anna Marie</p>
+      <p class="group-name">Grupa 4</p>
     </div>
 
     <!-- FOR LOOKING FOR A GROUP -->
@@ -165,7 +108,7 @@
     -->
     <div class="container">
       <img src='https://images.unsplash.com/photo-1444011283387-7b0f76371f12?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt='profile image' class="profile-img">
-      <p class="name">Anna Marie</p>
+      <p class="group-name">Grupa 5</p>
     </div>
 
   </div>
