Find-new-group component generated

--- a/groupby/src/modules/navigation/components/sidenav/sidenav.component.html
+++ b/groupby/src/modules/navigation/components/sidenav/sidenav.component.html
@@ -19,7 +19,7 @@
       <span class="tooltip">Dashboard</span>
     </li>
     <li>
-      <a href="#">
+      <a href="/home/find">
         <i class='bx bx-category-alt' ></i>
         <span class="links_name">Find new groups</span>
       </a>
