--- a/groupby/src/modules/home/components/find-new-group/find-new-group.component.html
+++ b/groupby/src/modules/home/components/find-new-group/find-new-group.component.html
@@ -1,13 +1,20 @@
 <layout-with-sidenav>
   <div class="text">Discover new groups!</div>
 
+
+
+
   <div class="wrapper-grid">
-    <div class="container">
+    <div class="container" *ngFor="let group of groups">
       <img src='https://images.unsplash.com/photo-1444011283387-7b0f76371f12?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt='profile image' class="profile-img">
-      <p class="group-name">{{group?.name}}</p>
-      <p class="description">{{group?.shortDescription}}</p>
+      <p class="group-name">{{group.name}}</p>
+      <p class="description">{{group.description}}</p>
       <button class='btn'>Follow</button>
     </div>
+
+
+    <!-- some groups to fill the website -->
+
     <div class="container">
       <img src='https://images.unsplash.com/photo-1444011283387-7b0f76371f12?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt='profile image' class="profile-img">
       <p class="group-name">Anna Marie</p>
