--- a/groupby/src/modules/home/components/find-new-group/find-new-group.component.css
+++ b/groupby/src/modules/home/components/find-new-group/find-new-group.component.css
@@ -25,7 +25,7 @@
   border-radius: 1rem;
   position: relative;
   margin: 0.5rem;
-  border:.1rem solid rgba(87,75,144,.1);
+  border-top:.1rem solid rgba(87,75,144,.1);
   box-shadow: .5rem .5rem 1rem rgba(0,0,0,.2);
   transition: all ease-in-out 0.2s;
   padding: 0;
@@ -34,7 +34,7 @@
 .container:hover {
   border-color: #fff;
   box-shadow: 0px 5px 20px 5px rgba(110, 123, 131, 0.5);
-  cursor: pointer;
+
 }
 .profile-img {
   width: 6rem;
@@ -71,6 +71,7 @@
 }
 .container .btn:hover {
   background-color: #FA8B7D;
+  cursor: pointer;
 }
 
 /*----------------------------------------*/
