--- a/groupby/src/modules/home/components/find-new-group/find-new-group.component.html
+++ b/groupby/src/modules/home/components/find-new-group/find-new-group.component.html
@@ -2,21 +2,19 @@
   <div class="text">Discover new groups!</div>
 
 
-
-
   <div class="wrapper-grid">
     <div class="container" *ngFor="let group of groups">
       <img src='https://images.unsplash.com/photo-1444011283387-7b0f76371f12?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt='profile image' class="profile-img">
       <p class="group-name">{{group.name}}</p>
-      <p class="description">{{group.description}}</p>
-      <button class='btn'>Follow</button>
+      <p class="description">{{group.shortDescription}}</p>
+      <button class='btn' id="{{group.name}}" (click)="JoinGroup(group)">Follow</button>
     </div>
 
 
     <!-- some groups to fill the website -->
 
     <div class="container">
-      <img src='https://images.unsplash.com/photo-1444011283387-7b0f76371f12?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt='profile image' class="profile-img">
+      <img src='https://images.unsplash.com/photo-1615800098779-1be32e60cca3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=710&q=80' alt='group image' class="profile-img">
       <p class="group-name">Anna Marie</p>
       <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but much more</p>
       <button class='btn'>Follow</button>
