--- a/groupby/src/modules/navigation/layouts/layout-with-sidenav/layout-with-sidenav.component.css
+++ b/groupby/src/modules/navigation/layouts/layout-with-sidenav/layout-with-sidenav.component.css
@@ -233,9 +233,10 @@
   min-height: 100vh;
   top: 0;
   left: 78px;
-  width: calc(100% - 78px);
+  width: calc(100% - 94px);
   transition: all 0.5s ease;
   z-index: 2;
+  margin:16px;
 }
 
 
