--- a/groupby/src/modules/navigation/layouts/layout-with-sidenav/layout-with-sidenav.component.html
+++ b/groupby/src/modules/navigation/layouts/layout-with-sidenav/layout-with-sidenav.component.html
@@ -29,7 +29,7 @@
       <span class="tooltip">Find new groups</span>
     </li>
     <li>
-      <a href="#">
+      <a href="/home/create-group">
         <i class='bx bxs-plus-square'></i>
         <span class="links_name">Create group</span>
       </a>
